package rest.techpro.model;

import java.util.UUID;

public abstract class Product {
	protected UUID id = UUID.randomUUID();
	protected Brand brand;
	protected Category category;
	protected String label;
	protected double price;
	
	public Product() {}
	
	public Product(Brand brand, Category category, String label, double price) {
		this.brand = brand;
		this.category = category;
		this.label = label;
		this.price = price;
	}
	
	public Product(Brand brand, Category category, String label, double price, UUID id) {
		this(brand, category, label, price);
		this.id = id;
	}

	public Brand getBrand() {
		return brand;
	}
	
	public void setBrand(Brand brand) {
		this.brand = brand;
	}
	
	public Category getCategory() {
		return category;
	}
	
	public void setCategory(Category category) {
		this.category = category;
	}
	
	public String getLabel() {
		return label;
	}
	
	public void setLabel(String label) {
		this.label = label;
	}
	
	public double getPrice() {
		return price;
	}
	
	public void setPrice(double price) {
		this.price = price;
	}
	
	public UUID getId() {
		return id;
	}
	
	public void setId(UUID id) {
		this.id = id;
	}
	
}
